--- a/manifests/nginx-variables.yaml
+++ b/manifests/nginx-variables.yaml
@@ -21,5 +21,9 @@ spec:
         ports:
         - containerPort: 80
         env:
-        - name: var1
-          value: "test"
+        - name: GREETING
+          value: "hello"
+        - name: HONORIFIC
+          value: "honorable"
+        - name: NAME
+          value: "kubernetes"
