--- a/manifests/nginx.yaml
+++ b/manifests/nginx.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-manifest2
+  name: nginx-manifest
   namespace: default
   labels:
     app: nginx
