--- a/stack/nginx.yaml
+++ b/stack/nginx.yaml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-    app:
+    app9:
         image: nginx
         ports:             
-        - "8080:80"
+        - "8080:90"
