--- a/stack/nginx.yaml
+++ b/stack/nginx.yaml
@@ -2,6 +2,6 @@ version: '3'
 
 services:
     app9:
-        image: nginx
+        image: chhikap/my-image
         ports:             
         - "8080:80"
